# typeshed

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  GENERICS.rst  LICENSE  MAINTAINERS.md  MANIFEST.in  NOTES-AMBV.txt  README.md  README.rst  TODO  VARIANCE.rst  __all__.find  _typeshed_repo.py  backfill_types.py  echo  generate_setup.py  get_version.py  ignore.find  migrate_script.py  mypy.ini  new  nodesource_setup.sh  oauth_libs_plan  package.json  pep-0483.txt  pep-0484.txt  pep-0500.txt  pep-484.txt  pep-NNNN.txt  pre-commit  pull-file.txt  pyproject.toml  pyrightconfig.json  pyrightconfig.scripts_and_tests.json  (+16 more)
.codeboarding/: GeneralUtils.md  MetadataManager.md  MypyConfiguration.md  PathResolver.md  RequirementHandler.md  on_boarding.md
.github/: dependabot.yml  removate.json  renovate.json  renovate.json5
.venv2/: pip-selfcheck.json
.venv3/: pip-selfcheck.json
2.7/: _bisect.py  _bisect.pyi  _codecs.py  _codecs.pyi  _collections.pyi  _functools.pyi  _heapq.pyi  _hotshot.py  _hotshot.pyi  _json.pyi  _random.py  _random.pyi  _sre.pyi  _struct.pyi  array.py  array.pyi  cStringIO.pyi  cmath.pyi  datetime.pyi  fcntl.pyi  gc.pyi  math.pyi  operator.pyi  signal.pyi  strop.py  strop.pyi  thread.pyi  time.pyi  xxsubtype.py  xxsubtype.pyi  zipimport.pyi  zlib.pyi
3/: _bisect.py  _bisect.pyi  _codecs.pyi  _heapq.pyi  _json.py  _json.pyi  _operator.py  _operator.pyi  _stat.py  _stat.pyi  _tracemalloc.pyi  _warnings.pyi  atexit.py  atexit.pyi  cmath.py  cmath.pyi  marshal.pyi  math.pyi  signal.pyi  time.pyi
drafts/: GENERICS.rst  NOTES-GUIDO.txt  NOTES-SIEK.txt  VARIANCE.rst
lib/: pyproject.toml
prototyping/: setup.py  test_typing.py  tox.ini  typing.py
python2/: _bisect.py  _codecs.py  _collections.py  _functools.py  _heapq.py  _hotshot.py  _json.py  _random.py  _sre.py  _struct.py  array.py  cStringIO.py  cmath.py  datetime.py  gc.py  math.py  operator.py  signal.py  strop.py  test_typing.py  thread.py  (+5 more)
(+8549 files in other folders)
