[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "stdlib"
dist-name = "types-stdlib"
author = "Ethan Smith"
author-email = "ethan@ethanhs.me"
home-page = "https://github.com/python/typeshed"
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.flit.sdist]
include = ["stdlib"]
exclude = [
    "third_party",
    ".travis.yml",
]

[tool.black]
line_length = 130
target_version = ["py37"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true
line_length = 130
