[tool.black]
line_length = 130
target_version = ["py37"]
force-exclude = ".*_pb2.pyi"
skip_magic_trailing_comma = true

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 130
skip_glob = "*_pb2.pyi"
extra_standard_library = [
    "typing_extensions",
    "_typeshed",
    # Extra modules not recognized by isort
    "_ast",
    "_collections_abc",
    "_compression",
    "_csv",
    "_curses",
    "_markupbase",
    "_random",
    "_tkinter",
    "_tracemalloc",
    "_warnings",
    "_weakrefset",
    "genericpath",
    "opcode",
    "pyexpat",
    # Python 2 modules
    "__builtin__",
    "cookielib",
    "cStringIO",
    "httplib",
    "mimetools",
    "rfc822",
    "thread",
    "urllib2",
    "urlparse",
    "BaseHTTPServer",
    "Queue",
    "SimpleHTTPServer",
    "SocketServer",
    "StringIO",
    "UserDict",
    "UserList",
    "UserString",
]

[tool.poetry]
name = "basedtypeshed"
version = "0.1.0"
description = ""
authors = [
    "DetachHead <detachhead@users.noreply.github.com>",
    "KotlinIsland <KotlinIsland@users.noreply.github.com>"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
